SERVER-64585 Fix use of 'MultipleCollectionAccessor' in 'attachCursorSourceToPipelineForLocalRead'